v1.0.5/_sources/chapters/core/guides/index.rst.txt
Developer Guides
======================================
Jina developer guides cover specific features and use cases.

Jina Core is the open-source framework of Jina AI. It is a new, state-of-the-art design pattern allowing you to create end-to-end search solutions. It leverages the latest AI and deep learning models out-of-the box and lets you deploy them anywhere you want.

Brand new users to Jina Core should first begin with the :doc:`../introduction/index` section which covers more fundamental concepts.

Further information on any specific method can be obtained in the :doc:`../api_references/index`.


.. toctree::
   :titlesonly:
   :glob:

   ../../install/index
   ../../my_first_jina_app
   ../../cross_multi_modality
   ../../crud
   ../../logging
   ../../prevent_duplicate_indexing
   ../../flow/index
   ../../flow/pattern
   ../../io
   ../../traversal
   ../../extend/*
   ../../remote/index
   ../../parallel
   ../../primitive_data_type
   ../../project_guide
   ../../traversal/index
   ../../simple_exec
   ../../cli/exit
   ../../envs
   ../../project-guide/project-guide
   ../../optimization
   ../../request_size
   ../../evaluation
   ../../ranker
   ../../incremental_indexing
   ../../stress/index
   ../../mime-type/index
