v1.1.2/_sources/chapters/core/guides/index.rst.txt
Developer Guides
======================================
Jina developer guides cover specific features and use cases.

Jina Core is the open-source framework of Jina AI. It is a new, state-of-the-art design pattern allowing you to create end-to-end search solutions. It leverages the latest AI and deep learning models out-of-the box and lets you deploy them anywhere you want.

Brand new users to Jina Core should first begin with the :doc:`../introduction/index` section which covers more fundamental concepts.

Further information on any specific method can be obtained in the :doc:`../api_references/index`.


.. toctree::
   :maxdepth: 1
   :caption: Understanding Jina
   :titlesonly:
   :glob:

   ../setup/index
   ../../my_first_jina_app
   ../../extend/mwu.rst
   ../../project-guide/project-guide
   ../../project_guide
   ../../executors
   ../../peas-and-pods
   ../../primitive_data_type
   ../../traversal
   ../../traversal/index
   ../../flow/index
   ../../flow/pattern
   ../../input_output
   ../../crud
   ../../ranker
   ../../cli/exit
   ../../cross_multi_modality
   ../../extend/*
   ../../envs
   ../../mime-type/index


.. toctree::
   :maxdepth: 1
   :caption: Improving Speed and Results in Jina
   :titlesonly:
   :glob:

   ../../logging
   ../../prevent_duplicate_indexing
   ../../parallel
   ../../simple_exec
   ../../optimization
   ../../batching
   ../../request_size
   ../../evaluation
   ../../incremental_indexing



.. toctree::
   :maxdepth: 1
   :caption: Deploying Jina
   :titlesonly:
   :glob:

   ../../remote/index
   ../../stress/index
